[package]
name = "k-line"
version = "0.1.0"
edition = "2021"
description = "A data service for meme token trading platform providing K-line data and real-time transaction streaming"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
actix-web-actors = "4.2"
actix = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
futures = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
env_logger = "0.10"
log = "0.4"
rand = "0.8"
bytes = "1"

[dev-dependencies]
actix-test = "0.1"
tokio-test = "0.4"
futures-util = "0.3"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
awc = "3"
actix-rt = "2.9"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
